// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WIDTHS+SWITCH define sheet NATIVE 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 0 /*sheet.root/$widths.0-640*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              0,
              640,
            ],
            "type": "$widths",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "backgroundColor: gray /*sheet.root/$widths.0-640/$switch.isClosed*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              0,
              640,
            ],
            "type": "$widths",
          },
          Object {
            "case": "isClosed",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "margin: 10 /*sheet.root/$widths.640-1024*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              640,
              1024,
            ],
            "type": "$widths",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "margin: 20 /*sheet.root/$widths.1024-*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              1024,
              0,
            ],
            "type": "$widths",
          },
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`WIDTHS+SWITCH define sheet WEB 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (max-width: 639px).b { background-color:gray /*sheet.root/$widths.0-640/$switch.isClosed*/ }",
        ],
        "conditions": Array [
          Object {
            "case": "isClosed",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 640px) and (max-width: 1023px).c { margin:10px /*sheet.root/$widths.640-1024*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 1024px).d { margin:20px /*sheet.root/$widths.1024-*/ }",
        ],
      },
    ],
    "~": "c",
  },
}
`;
